--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>backend</groupId>
     <artifactId>psique</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>psique</name>
     <description>psique</description>
     <properties>
