--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/consultorio
 spring.datasource.username=postgres
-spring.datasource.password=master
+spring.datasource.password=matematica987
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
-api.security.token.secret=${JWT_TOKEN:12345678}
+api.security.token.secret=${JWT_TOKEN:13799731}
 cors.enabled=true
 cors.allowed.origins=*
